add new entries properly

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://bootswatch.com/slate/bootstrap.min.css" crossorigin="anonymous">
 
 <div class="container" style="width: 300px; margins: 0 auto;">
-<form action="/" method="post">
+<form action="new" method="post">
 <div class="form-group" style="max-width: 300px;margins:0 auto;">
 <label for="url">Kik.to Url Shortner:</label>
 <input type="text" name="u" class="form-control" id="u" aria-describedby="urlHelp" placeholder="http://">
