--- a/templates/success.html
+++ b/templates/success.html
@@ -1,2 +1,2 @@
 
-<html><body><br><br><center>use kik.to/Gp<br><br>To edit later, bookmark <br>kik.to/?k=rfndWnwSRe
+<html><body><br><br><center>use kik.to/{{newid}}<br><br>To edit later, bookmark <br>kik.to/?k={{key}}
