tring some adsense

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,9 @@
-<html><head><title>kik.to</title></head>
+<html>
+<head>
+<title>kik.to</title>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8020398025070373"
+     crossorigin="anonymous"></script>
+</head>
 <body><center><br><br>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
