--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8020398025070373"
+     crossorigin="anonymous"></script>
+</head>
+<body>
 <br><br>
 <center>
 <b>Thank you for using kik.to!</b><br><br>
@@ -10,3 +16,6 @@ setTimeout(function()
   window.location="{{redirect}}"
 },3000);
 </script>
+
+</body>
+</html>
