add some google analytics stuff

--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -17,5 +17,28 @@ setTimeout(function()
 },3000);
 </script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JD1PWZZZYY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JD1PWZZZYY');
+</script>
+
+{% if ga != None %}
+    value of variable: {{ variable }}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ga}}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', '{{ga}}');
+</script>
+{% endif %}
+
 </body>
 </html>
