--- a/templates/index.html
+++ b/templates/index.html
@@ -20,3 +20,15 @@
 </form>
 </div>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JD1PWZZZYY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JD1PWZZZYY');
+</script>
+
+</body>
+</html>
