--- a/templates/index2.html
+++ b/templates/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Kik.to | URL Shortener</title>
+    <title>kik.to | URL Shortener</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -60,7 +60,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="logo">Kik.to</div>
+        <div class="logo">kik.to</div>
         <div class="description">A simple, fast URL shortener. Enter your URL below:</div>
         <form class="input-group" action="/new" method="POST">
             <input type="text" name="u" placeholder="Enter your URL here...">
