make it more fadey

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -67,7 +67,7 @@
             <button type="submit">Shorten</button>
         </form>
         <div class="result"></div>
-        We'll never share your url with anyone else.
+        <div class="description">We'll never share your url with anyone else.</div>
     </div>
 
 </body>
